Made fancy menu transitions

--- a/pages/user/parking.html
+++ b/pages/user/parking.html
@@ -30,10 +30,13 @@
     </section>
     <section>
         <div class="parking-spots">
-            Parking Spots
+            PARKING SPOTS
             <div class="number-of-available-spots">
                 15/50 
             </div>
+            <p>
+                Additional information for parking will be displayed here.
+            </p>
         </div>
     </section>
 </body>
