Minor HTML cleanup

--- a/pages/admin/admin_parking.html
+++ b/pages/admin/admin_parking.html
@@ -23,7 +23,7 @@
         <a href="#notimplemented">insertnamehere</a>
         <a href="#notimplemented">andalso</a>
     </ul>
-    <section style="margin-left:15%;padding:1px 16px;height:1000px;">
+    <section style="margin-left:15%;padding:1px 16px;">
         <br>The admin parking panel will contain information about the parking lots, their user history and current
         users located at them.
     </section>
