--- a/pages/admin/admin_user_control.html
+++ b/pages/admin/admin_user_control.html
@@ -23,7 +23,7 @@
         <a href="#notimplemented">customerid#</a>
         <a href="#notimplemented">customerid#</a>
     </ul>
-    <section style="margin-left:15%;padding:1px 16px;height:1000px;">
+    <section style="margin-left:15%;padding:1px 16px;">
         <br>The admin user control panel will contain information about the users of the system.
     </section>
 </body>
