--- a/pages/user/parking.html
+++ b/pages/user/parking.html
@@ -25,7 +25,7 @@
         <a href="#notimplemented">andalsohere</a>
     </ul>
     <h1>Lidl</h1>
-    <section style="margin-left:15%;padding:1px 16px;height:1000px;">
+    <section style="margin-left:15%;padding:1px 16px;">
         <h1>PARKING SPACE SELECTION SCREEN GOES HERE</h1>
     </section>
     <section>
